@@ -126,7 +126,7 @@ namespace PSCalib {
  *    
  *    // Access and print comments from the calibration "geometry" file:
  *        std::map<std::string, std::string>& dict = geometry.get_dict_of_comments ();
- *        cout << "dict['HDR'] = " << dict["HDR"] << '\n';
+ *        cout << "dict[0] = " << dict[0] << '\n';
  *  @endcode
  * 
  *  @li Print methods
@@ -247,6 +247,7 @@ public:
 
   /// Returns dictionary of comments
   std::map<std::string, std::string>& get_dict_of_comments() {return m_dict_of_comments;}
+  //std::map<int, std::string>& get_dict_of_comments() {return m_dict_of_comments;}
 
   /// Prints the list of geometry objects
   void print_list_of_geos();
@@ -373,6 +374,7 @@ private:
 
   /// map/dictionary of comments from calibration "geometry" file 
   std::map<std::string, std::string> m_dict_of_comments;
+  //std::map<int, std::string> m_dict_of_comments;
 
   /// Adds comment to the dictionary
   void add_comment_to_dict(const std::string& line);
